adding some structure and styles

--- a/todolist.html
+++ b/todolist.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO list</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="main.js" defer></script>
 </head>
 <body>
@@ -20,9 +23,9 @@
             </ul>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-todo">
         <h1>TODO List</h1>
-        <div class="search">
+        <div class="search-todo">
             <form>
                 <input type="text" placeholder="Añade tareas...">
                 <button class="btn-add">+</button>
