add some fixes to the js

--- a/todolist.html
+++ b/todolist.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <script src="main.js" defer></script>
+    <script src="todolist.js" defer></script>
 </head>
 <body>
     <header>
@@ -31,13 +31,13 @@
                 <button class="btn-add">+</button>
             </form>
         </div>
-        <div class="li-container">
-            <ul>
+        <div >
+            <ul class="li-container">
                 
             </ul>
         </div>
         <div class="empty">
-            <p>All tasks are completed</p>
+            <p>Todas las tareas están terminadas</p>
         </div>
     </div> 
 </body>
