its working some features of the to do list

--- a/todolist.html
+++ b/todolist.html
@@ -28,7 +28,7 @@
         <div class="search-todo">
             <form>
                 <input type="text" placeholder="Añade tareas...">
-                <button class="btn-add">+</button>
+                <button type="button" class="btn-add">+</button>
             </form>
         </div>
         <div >
