just left some details

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">PoKedex</a></li>
             </ul>
-            <img src="./img/logo-pokemon.png" alt="Logo pokemon">
+            <a href="index.html"><img src="./img/logo-pokemon.png" alt="Logo pokemon"></a>
             <ul>
                 <li><a href="todolist.html">Todo List</a></li>
             </ul>
